Renomeadas algumas Strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,19 @@
 <resources>
     <string name="app_name">Tela login - Quickdeal</string>
-    <string name="btn_continuar">Continuar</string>
-    <string name="texto_façacadastro">Faça seu Cadastro:</string>
+    <string name="texto_botao_continuar">Continuar</string>
+    <string name="texto_facacadastro">Faça seu Cadastro:</string>
     <string name="texto_nomecompleto">Nome Completo</string>
     <string name="texto_datanascimento">Data de Nascimento</string>
     <string name="texto_email">E-mail</string>
     <string name="texto_senha">Senha</string>
     <string name="texto_cadastrar">Cadastrar</string>
-    <string name="btn_naocadastro">Não tenho Cadastro</string>
-    <string name="btn_esquecisenha">Esqueci a Senha</string>
-    <string name="txt_EsqueciSenha">Esqueci minha senha</string>
-    <string name="txt_redef">Para redefinir sua senha, informe o e-mail cadastrado na sua conta e lhe enviaremos um link com as instruções.</string>
-    <string name="txt_emailUser">Email de usuário:</string>
-    <string name="txt_confirmar">Confirmar</string>
-    <string name="txt_cancelar">Cancelar</string>
+    <string name="texto_botao_naocadastro">Não tenho Cadastro</string>
+    <string name="texto_botao_esquecisenha">Esqueci a Senha</string>
+    <string name="texto_esqueciSenha">Esqueci minha senha</string>
+    <string name="texto_redef">Para redefinir sua senha, informe o e-mail cadastrado na sua conta e lhe enviaremos um link com as instruções.</string>
+    <string name="texto_emailUser">Email de usuário:</string>
+    <string name="texto_confirmar">Confirmar</string>
+    <string name="texto_cancelar">Cancelar</string>
     <string name="buscar">Buscar</string>
     <string name="ativar_geolocalizao">Ativar geolocalização</string>
     <string name="todo">TODO</string>
