Adicionada tela de perfil

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,9 @@
     <string name="textoimagemcomida">Imagem da comida</string>
     <string name="textoimagemquickdeal">Logo do Quickdeal</string>
     <string name="textoimagemcentro">Imagem do centro</string>
+    <string name="texto_nome">Nome:</string>
+    <string name="texto_email2">Email:</string>
+    <string name="texto_idade">Idade:</string>
+    <string name="texto_senha2">Senha:</string>
+    <string name="texto_logout">LOGOUT</string>
 </resources>
